--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
+    "ng-multiselect-dropdown": "^1.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
