--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "ng-multiselect-dropdown": "^1.0.0",
     "ngx-pagination": "^6.0.3",
     "popper.js": "^1.16.1",
